[package]
name = "crust"
version = "0.1.0"
authors = ["TheNappap <napoleonpapiertjes@gmail.com>"]
edition = "2024"

[dependencies]
itertools = "0.14"
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime/", branch = "release-33.0.0" }
cranelift-frontend = { git = "https://github.com/bytecodealliance/wasmtime/", branch = "release-33.0.0" }
cranelift-module = { git = "https://github.com/bytecodealliance/wasmtime/", branch = "release-33.0.0" }
cranelift-native = { git = "https://github.com/bytecodealliance/wasmtime/", branch = "release-33.0.0" }
cranelift-object = { git = "https://github.com/bytecodealliance/wasmtime/", branch = "release-33.0.0" }